<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>featurecat</groupId>
	<artifactId>lizzie</artifactId>
	<version>yzy2.4.4</version>

	<properties>
		<!-- Prevent warning: "[WARNING] Using platform encoding (UTF-8 actually) 
			to copy filtered resources, i.e. build is platform dependent!" -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerArgs>
						<arg>-Xlint:all</arg>					
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<!-- No need to specify the main class since maven-shade-plugin will 
					add it. -->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>featurecat.lizzie.Lizzie</mainClass>
								</transformer>
							</transformers>
							<shadedArtifactAttached>true</shadedArtifactAttached>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<!-- Required to get the test failure reports in stdout -->
					<useFile>false</useFile>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.coveo</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.5.1</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.coveo</groupId>
										<artifactId>
											fmt-maven-plugin
										</artifactId>
										<versionRange>
											[2.5.1,)
										</versionRange>
										<goals>
											<goal>format</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>	

		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180130</version>
		</dependency>
	
	 	<dependency>
  			<groupId>com.teamdev.jxbrowser</groupId>
  			<artifactId>license</artifactId>
  			<version>6.21</version>
		</dependency>
		
		<dependency>
	  		<groupId>com.teamdev.jxbrowser</groupId>
	    	<artifactId>jxbrowser</artifactId>
	      	<version>6.21</version>
	 	</dependency>

 		<dependency>
  			<groupId>com.teamdev.jxbrowser</groupId>
  			<artifactId>jxbrowser-win64</artifactId>
  			<version>6.21</version>
		</dependency>

	<!--
     	<dependency>
  			<groupId>com.teamdev.jxbrowser</groupId>
  			<artifactId>jxbrowser-win32</artifactId>
  			<version>6.21</version>
		</dependency>

		<dependency>
  			<groupId>com.teamdev.jxbrowser</groupId>
  			<artifactId>jxbrowser-mac</artifactId>
  			<version>6.21</version>
		</dependency>

     	<dependency>
  			<groupId>com.teamdev.jxbrowser</groupId>
  			<artifactId>jxbrowser-linux64</artifactId>
  			<version>6.21</version>
		</dependency>
 -->

		<dependency>
    		<groupId>ch.ethz.ganymed</groupId>
    		<artifactId>ganymed-ssh2</artifactId>
    		<version>build210</version>
		</dependency>

		<dependency>
			<groupId>com.swingxdate</groupId>
			<artifactId>swingxcore</artifactId>
			<version>1.6.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<!-- https://code.google.com/archive/p/juniversalchardet -->
		<dependency>
			<groupId>com.googlecode.juniversalchardet</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>1.0.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.jhlabs/filters -->
		<dependency>
			<groupId>com.jhlabs</groupId>
			<artifactId>filters</artifactId>
			<version>2.0.235</version>
		</dependency>
		<dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
        </dependency>     
        
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
        </dependency>
        
        <dependency>
            <groupId>io.socket</groupId>
            <artifactId>socket.io-client</artifactId>
            <version>1.0.0</version>
        </dependency>
 
        
	</dependencies>
</project>
